# sds-data-model

./: .buildinfo  .flake8  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  Untitled Diagram.drawio  aim.html  codeofconduct.html  contributing.html  data_model_rasterio.drawio  dev.ipynb  genindex.html  index.html  license.html  modules.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  red-green-refactor.html  reference.html  reviewer_workflow.drawio  sds_eco_system.drawio  search.html  searchindex.js  test.ipynb  usage.html
.github/workflows/: Github workflow.md  deploy-docs.yml  python-package.yml  setup.yml  vulnerability-scanning.yml
.setup-action/: action.yml
_build/doctrees/: codeofconduct.doctree  contributing.doctree  environment.pickle  index.doctree  license.doctree  reference.doctree  usage.doctree
_build/html/: genindex.html  reference.html
_sources/: index.rst.txt  modules.rst.txt  reference.rst.txt  usage.rst.txt
_sources/modules/: sds_data_model.constants.rst.txt  sds_data_model.dataframe.DataFrameWrapper.rst.txt  sds_data_model.dataframe.rst.txt  sds_data_model.graph.update_graph.rst.txt  sds_data_model.logger.rst.txt  sds_data_model.table.TableLayer.rst.txt  sds_data_model.vector.VectorTile.rst.txt
actions/setup-action/: action.yml
actions/setup-environment/: action.yml
docs/: .buildinfo  codeofconduct.html  conf.py  contributing.html  genindex.html  index.html  license.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_sources/: index.rst.txt  usage.rst.txt
docs/_sources/modules/: sds_data_model.dataframe.DataFrameWrapper.rst.txt  sds_data_model.graph.initialise_graph.rst.txt  sds_data_model.graph.rst.txt  sds_data_model.logger.log.rst.txt  sds_data_model.metadata.Metadata.rst.txt  sds_data_model.metadata.rst.txt  sds_data_model.raster.DatasetWrapper.rst.txt  sds_data_model.raster.rst.txt  sds_data_model.table.rst.txt
docs/modules/: sds_data_model.constants.html  sds_data_model.dataframe.DataFrameWrapper.html  sds_data_model.dataframe.html  sds_data_model.graph.html  sds_data_model.graph.initialise_graph.html  sds_data_model.graph.update_graph.html  sds_data_model.logger.html  sds_data_model.logger.log.html  sds_data_model.logger.stringify_callable.html  sds_data_model.metadata.Metadata.html  sds_data_model.metadata.html  sds_data_model.raster.DatasetWrapper.html  sds_data_model.raster.html  sds_data_model.table.TableLayer.html  sds_data_model.table.html  sds_data_model.vector.TiledVectorLayer.html  sds_data_model.vector.VectorLayer.html  sds_data_model.vector.VectorTile.html  sds_data_model.vector.html
markdown/: documentation-building.md  formatters.md  linting.md  static-type-analysis.md  testing.md  vulnerability-scanning.md
modules/: sds_data_model.constants.html  sds_data_model.dataframe.DataFrameWrapper.html  sds_data_model.dataframe.html  sds_data_model.graph.html  sds_data_model.graph.initialise_graph.html  sds_data_model.graph.update_graph.html  sds_data_model.logger.html  sds_data_model.logger.log.html  sds_data_model.logger.stringify_callable.html  sds_data_model.metadata.Metadata.html  sds_data_model.metadata.html  sds_data_model.raster.DatasetWrapper.html  sds_data_model.raster.html  sds_data_model.table.TableLayer.html  sds_data_model.table.html  sds_data_model.vector.TiledVectorLayer.html  sds_data_model.vector.VectorLayer.html  sds_data_model.vector.VectorTile.html  sds_data_model.vector.html
source/: aim.rst  conf.py  index.rst  modules.rst  problem_statement.md  red-green-refactor.md  reference.rst  requirements.txt  usage.rst
source/_templates/: class.rst  module.rst
source/modules/: sds_data_model.constants.rst  sds_data_model.graph.rst  sds_data_model.logger.rst  sds_data_model.logger.stringify_callable.rst  sds_data_model.metadata.rst  sds_data_model.raster.rst  sds_data_model.table.rst  sds_data_model.vector.TiledVectorLayer.rst  sds_data_model.vector.VectorLayer.rst  sds_data_model.vector.rst
src/: conftest.py
src/sds_data_model/: __init__.py  _dataframe.py  _helpers.py  _raster.py  _table.py  _vector.py  _wrapper.py  conftest.py  constants.py  dataframe.py  graph.py  logger.py  metadata.py  raster.py  table.py  test.ipynb  test.py  vector.py  wrapper.py
src/sds_data_model/tests/: __init__.py  test_DataFrameWrapper.py  test_graph.py  test_raster.py  test_vector.py
src/sds_data_model/tests/data/: same_cell_size_same_shape.tif
src/sds_data_model/tests/fixtures/: fixtures_DataFrameWrapper.py  fixtures_graph.py  fixtures_metadata.py  fixtures_raster.py  fixtures_vector.py
tests/: PysparkWrapperTest.py  __init__.py  conftest.py  test_DataFrameWrapper.py  test_dataframe.py  test_graph.py  test_logger.py  test_metadata.py  test_pysparkWrapper.py  test_raster.py  test_vector.py
tests/data/: generate_raster_data.ipynb  larger_cell_size_same_shape.tif  ramsar_dag.dot  same_shape_same_cell_size.tif  test_data.csv  tile_ids.csv
tests/data/Countries_(December_2021)_GB_BUC/: CTRY_DEC_2021_GB_BUC.dbf  Countries_(December_2021)_GB_BUC.xml
tests/fixtures/: __init__.py  fixtures_DataFrameWrapper.py  fixtures_dataframe.py  fixtures_graph.py  fixtures_metadata.py  fixtures_raster.py  fixtures_vector.py
tests/fixtures/dataframe/: call_method.py  common.py  pipeline.py  to_zarr.py
tests/test.metadata/: abstract.xml
tests/test_dataframe/: test_call_method.py  test_from_files.py  test_pipeline.py  test_to_zarr.py
tests/test_metadata/: example.xml  example_one.xml  ramsar.xml  ramsar_without_keywords.xml  ramsar_without_title.xml  title.xml
