[tool.poetry]
name = "sds-data-model"
version = "0.0.0"
description = "SDS Data Model"
authors = ["Ed Fawcett-Taylor <ed.fawcett-taylor@defra.gov.uk>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Defra-Data-Science-Centre-of-Excellence/sds-data-model"
repository = "https://github.com/Defra-Data-Science-Centre-of-Excellence/sds-data-model"
documentation = "https://defra-data-science-centre-of-excellence.github.io/sds-data-model/"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/Defra-Data-Science-Centre-of-Excellence/sds-data-model/releases"

[tool.poetry.dependencies]
python = "~3.8"
geopandas = "^0.10.2"
requests = "^2.27.1"
matplotlib = "^3.5.1"
rasterio = "^1.2.10"
xarray = "^2022.3.0"
zarr = "^2.11.1"
netCDF4 = "^1.5.8"
dask = {extras = ["diagnostics"], version = "^2022.4.0"}
Rtree = "^0.9.7"
s3fs = "^2022.3.0"
more-itertools = "^8.12.0"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
networkx = "^2.8.4"
graphviz = "^0.20"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = ">=21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
Pygments = "^2.10.0"
pyupgrade = "^2.29.1"
ipykernel = "^6.9.2"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["sds_data_model", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
