[tool.poetry]
name = "sds-data-model"
version = "0.1.0"
description = "SDS Data Model"
authors = ["Piumi Algamagedona", "Tim Ashelford", "James Duffy", "Ed Fawcett-Taylor", "Samuel Flint", "James Kenyon", "Daniel Lewis", "Jordan Pinder", "Lara Spearman",]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Defra-Data-Science-Centre-of-Excellence/sds-data-model"
repository = "https://github.com/Defra-Data-Science-Centre-of-Excellence/sds-data-model"
documentation = "https://defra-data-science-centre-of-excellence.github.io/sds-data-model/"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/Defra-Data-Science-Centre-of-Excellence/sds-data-model/releases"

[tool.poetry.dependencies]
python = "~3.8"
geopandas = "^0.10.2"
requests = "^2.28.1"
matplotlib = "^3.6.0"
rasterio = "^1.2.10"
xarray = "^2022.3.0"
zarr = "^2.11.1"
netCDF4 = "^1.5.8"
dask = {extras = ["diagnostics"], version = "2022.4.0"}
Rtree = "^0.9.7"
more-itertools = "^8.12.0"
lxml = "^4.9.1"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"
pyogrio = "^0.4.1"
typing-extensions = "^4.3.0"
graphviz = "^0.20.1"
opencv-python = "^4.6.0"
rioxarray = "^0.12.0"
types-requests = "^2.28.9"
chispa = "^0.9.2"
pyspark = "^3.2.1"
pyarrow = "^9.0.0"
pyspark-vector-files = "^0.2.3"
scipy = "^1.9.2"
bng-indexer = {git = "https://github.com/Defra-Data-Science-Centre-of-Excellence/bng-indexer.git"}
odfpy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.982"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^5.0.4"
black = ">=21.10b0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
Pygments = "^2.10.0"
pyupgrade = "^2.29.1"
ipykernel = "^6.9.2"
nox-poetry = "^1.0.1"
isort = "^5.10.1"
nox = "^2022.1.7"
pytest-datadir = "^1.3.1"
myst-parser = "^0.18.0"
bandit = "^1.7.4"
Flake8-pyproject = "^1.1.0"
blacken-docs = "^1.12.1"

[tool.poetry.group.dev.dependencies]
piccolo-theme = "^0.14.0"


[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["sds_data_model", "tests"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
warn_unreachable = true
warn_return_any = true
warn_unused_configs = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
# See https://numpy.org/devdocs/reference/typing.html#mypy-plugin
plugins = "numpy.typing.mypy_plugin"

[tool.flake8]
select = [
    # annotations
    "ANN",
    # flake8-bugbear
    "B", 
    # flake8-bugbear: opinionated
    "B9",
    # flake8-black
    "BLK", 
    # mmccabe
    "C",
    # flake8-docstrings
    "D",
    # darglint
    "DAR",
    # pycodestyles
    "E",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8-bandit
    "S", 
    # pycodestyles
    "W"
]
ignore = [
    # Black compatiblity: Ignore whitespace before ‘:'
    "E203",
    # Bugbear compatibility: Ignore 79 character limit on line length
    "E501",
    # Black compatiblity: Ignore line break before binary operator
    "W503"
]
max-line-length = 80
max-complexity = 10
application-import-names = ["sds_data_model", "tests"]
import-order-style = "google"
per-file-ignores = [
    # Ignore use of assert and missing docstring parameters in tests/
    "tests/*:S101,DAR101,DAR201",
    # Ignore missing docstring parameters in noxfile.py/
    "noxfile.py:DAR101",
    # Ignore 'imported but unused' in __init__.py
    "*__init__.py:F401",
]
docstring-convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
